spec/.test/config/invalid/tags.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => 1,
    'metadata' => [],
    'passes' => [],
    'mappers' => [],
];
